Fix image map on safari

--- a/src/Sulu/Bundle/MediaBundle/Resources/js/containers/ImageMap/imageRenderer.scss
+++ b/src/Sulu/Bundle/MediaBundle/Resources/js/containers/ImageMap/imageRenderer.scss
@@ -6,7 +6,7 @@
 .image-renderer-wrapper {
     position: relative;
     overflow: hidden;
-    display: inline-flex;
+    display: inline-block;
 
     &,
     * {
@@ -14,6 +14,7 @@
     }
 
     img {
+        display: block;
         pointer-events: none;
     }
 }
